objects/gvp__Staff_Incentive__c.object
<CustomObject>
    <description>An incentive offered to bartenders, servers or other account staff to promote a product.</description>
    <fields>
        <fullName>gvp__Account_Call_Send_Email_Date__c</fullName>
        <formula>IF (
    ISBLANK(gvp__Account_Call__c),
    null,
    gvp__Account_Call__r.gvp__Email_Summary_Sent_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Call Send Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call_Send_Email__c</fullName>
        <formula>IF (
    ISBLANK(gvp__Account_Call__c),
    false,
    gvp__Account_Call__r.gvp__Summary_Email__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Call Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call_Status__c</fullName>
        <formula>IF (
    ISBLANK(gvp__Account_Call__c),
     $Label.gvp__no_related_account_call,
    IF (
        ISBLANK(TEXT(gvp__Account_Call__r.gvp__Status__c)),
        $Label.gvp__no_account_call_status,
        TEXT(gvp__Account_Call__r.gvp__Status__c)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Call Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Account_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Call</label>
        <referenceTo>gvp__Account_Call__c</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gvp__Activity_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Goal</label>
        <referenceTo>gvp__Activity_Goal__c</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Actual_Cost_of_Incentive__c</fullName>
        <label>Actual Cost of Incentive</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>gvp__Brand__c.gvp__Visible_on_Auth__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_1__c</fullName>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_2__c</fullName>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_3__c</fullName>
        <label>Custom 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_1__c</fullName>
        <label>Custom Fact 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_2__c</fullName>
        <label>Custom Fact 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Days_Incentive_Running__c</fullName>
        <formula>gvp__Incentive_End_Date__c - gvp__Incentive_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Incentive Running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Incentive_Budget__c</fullName>
        <label>Incentive Budget</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Incentive_Description__c</fullName>
        <label>Incentive Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Incentive_End_Date__c</fullName>
        <label>Incentive End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Incentive_Results__c</fullName>
        <label>Incentive Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Incentive_Start_Date__c</fullName>
        <label>Incentive Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <description>Ensure that Items relate to the proper Label</description>
            <filterItems>
                <field>gvp__Item__c.gvp__Label__c</field>
                <operation>equals</operation>
                <valueField>$Source.gvp__Label__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.gvp__Label__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>gvp__Item__c.gvp__Visible_on_Auth__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select an Item which corresponds to the selected Label or change/delete the Label</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Item__c</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <description>Ensure that Labels relate to the proper Brand</description>
            <filterItems>
                <field>gvp__Label__c.gvp__Brand__c</field>
                <operation>equals</operation>
                <valueField>$Source.gvp__Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.gvp__Brand__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>gvp__Label__c.gvp__Visible_on_Auth__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a Label which corresponds to the selected Brand or change/delete the Brand</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>gvp__Program__c.gvp__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Program__c</referenceTo>
        <relationshipLabel>Staff Incentives</relationshipLabel>
        <relationshipName>Staff_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Incentive</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC-{000000000}</displayFormat>
        <label>Incentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Incentives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>